policydemo/allow-busybox-egress-v3.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: security.allow-busybox-egress-v3
  namespace: advanced-policy-demo
spec:
  tier: security
  selector: run == 'access'
  types:
    - Egress
  egress:
    - action: Allow
