policydemo/allow-nginx-ingress-v3.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: security.allow-nginx-ingress-v3
  namespace: advanced-policy-demo
spec:
  tier: security
  selector: app == 'nginx'
  types:
    - Ingress
  ingress:
    - action: Allow
      source:
        selector: run == 'access'
